Attachment and message pane enhancements

--- a/userChrome.css
+++ b/userChrome.css
@@ -44,14 +44,121 @@ Message Window
 ****************************************/
 
 #singlemessage { 
-	background-color:#FFF !important;
+	background-color:#D8DEE5 !important;
+	
 }
 
 #msgHeaderView {
-	background-color:#EEE !important;
-	box-shadow:inset 0px -3px 5px rgba(0,0,0,.1), inset 0px 3px 5px rgba(0,0,0,.1), 0px 1px 1px rgba(0,0,0,.1) !important;
-	padding:4px 8px 7px !important;
-	
+	border-bottom:none !important;
+	background:none !important;
+	margin:0px 10px !important;
+	min-height:100px !important;
+	max-height:300px !important;
+	height: auto !important;
+	text-shadow:0px 1px 0px rgba(255,255,255,.7);
+	position: relative !important;
+}
+
+#otherActionsBox {
+	position:absolute !important;
+	bottom:0px !important;
+	right:0px !important;
+}
+
+#msgHeaderView .headerName { 
+	display:none !important;
+}
+
+#expandedsubjectLabel { display:none !important;}
+
+
+#expandedsubjectBox .headerValue {
+	font-size:20px !important;
+	line-height:25px !important;
+
+}
+#expandedHeadersTopBox {
+	padding:0px !important;
+	margin-top:6px !important;
+	margin-bottom:-6px !important;
+	float:left !important;
+
+}
+#expandedsubjectBox {
+	padding:0px !important;
+	margin:0px !important;
+	margin-top:-20px !important;
+	margin-bottom:-5px !important;
+}
+
+#messagepane {
+	margin:10px !important;
+	background-color:#FFF !important;
+	box-shadow:0px 1px 2px rgba(0,0,0,.3) !important;
+	border-radius:2px !important;
+	font-size:12px !important;
+}
+
+/****************************************
+Attachment Bar
+****************************************/
+
+#attachmentBar {
+	background:-moz-linear-gradient(top, #2FADF4 0%, #1991EF 100%) !important;
+	border-top:solid 1px rgba(0,0,0,.1) !important;
+	box-shadow:inset 0px 1px 0px rgba(255,255,255,.5) !important;
+	color:#FFF !important;
+	text-shadow:0px 1px 0px rgba(0,0,0,.2) !important;
+	padding:5px !important;
+}
+
+#attachmentBar label {
+	color:#FFF !important;
+}
+
+#attachmentSaveAllMultipleMenu label {
+	color:#666  !important;
+}
+
+#attachmentSaveAllSingleMenu label {
+	color:#666  !important;
+}
+
+#attachmentSaveAllMultiple { 
+	-moz-appearance:none !important;
+}
+
+#attachmentSaveAllSingle .toolbarbutton-menubutton-button, #attachmentSaveAll .toolbarbutton-menubutton-button {
+	background:none !important;
+	background-color:rgba(0,0,0,.12) !important;
+	border:solid 1px rgba(0,0,0,.1) !important;
+	padding-left:8px !important;
+	padding-right:8px !important;
+	box-shadow:inset 0px 1px 0px rgba(255,255,255,.4), 0px 3px 10px rgba(0,0,0,.05) !important;
+	background-image:none !important;
+	border-radius:15px !important;
+	font-size:11px !important;
+	-moz-appearance:none !important;
+	line-height:20px;
+	text-shadow:0px -1px 0px rgba(0,0,0,.2);
+	padding:4px 10px 4px 8px !important;
+}
+
+#attachmentSaveAllSingle .toolbarbutton-menubutton-button:hover, #attachmentSaveAll .toolbarbutton-menubutton-button:hover {
+	background-color:rgba(0,0,0,.2) !important;
+	border:solid 1px rgba(0,0,0,.15) !important;
+}
+
+#attachmentSaveAllSingle:hover, #attachmentSaveAll:hover {
+	-moz-appearance:none !important;
+}
+
+#attachmentSaveAllSingle .toolbarbutton-icon, #attachmentSaveAll .toolbarbutton-icon {
+	display:none !important;
+}
+
+#attachmentList { 
+	padding:5px !important;
 }
 
 /****************************************
@@ -61,16 +168,25 @@ Toolbox, Panels and the Likes
 #searchInput {
 	max-width:190px !important;
 	border-radius:20px !important;
+	-moz-appearance:none !important;
+	font-size:12px !important;
+	border:solid 1px rgba(0,0,0,.3) !important;
+	box-shadow:inset 2px 2px 2px rgba(0,0,0,.1), 0px 1px 0px rgba(255,255,255,.4) !important;
+	padding-left:4px !important;
+	padding-right:4px !important;
+
 }
 
 .mail-toolbox {
 	background-image:none !important;
 	border-top:solid 1px rgba(0,0,0,.1);
-	background:-moz-linear-gradient(top, #dddddd 0%, #c9c9c9 100%) !important;
+	background:-moz-linear-gradient(top, #dddddd 0%, #B2B2B2 100%) !important;
 	margin-top:-2px;
 	z-index:300;
-	box-shadow:inset 0px 1px 0px rgba(255,255,255,.9);
-	padding-left:10px;
+	box-shadow:inset 0px 1px 0px rgba(255,255,255,.9) !important;
+	padding-left:10px !important;
+	border-bottom:solid 1px rgba(0,0,0,.3) !important;
+
 }
 
 .toolbarbutton-1[disabled=true] {
@@ -116,14 +232,42 @@ treechildren::-moz-tree-row  {
 }
 
 treechildren { 
-	background-color:#dee4ea !important;
-	text-shadow:0px 1px 0px rgba(255,255,255,.9);
+	
+	text-shadow:0px 1px 0px rgba(255,255,255,.9) !important;
+	
     
 }
 
-#threadTree treechildren::-moz-tree-row(selected), treechildren::-moz-tree-row(selected) {
-	background-color: #69c !important;
-	background-image: -moz-linear-gradient(center bottom, rgba(0,0,0,0.15) 20%,rgba(0,0,0,0.0) 100%);
+
+
+/****************************************
+Email Data List
+****************************************/
+#threadTree treechildren::-moz-tree-row(selected) {
+	outline: none !important;
+	-moz-appearance:none !important;
+	background-color:#437CD4 !important;
+	background-image:  -moz-linear-gradient(top, #528EEB 0%, #437CD4 100%) !important;
+	color: #FFF !important;
+	text-shadow:0px 1px 0px rgba(0,0,0,.14) !important;
+	box-shadow:0px 1px 0px rgba(0,0,0,.1), inset 0px 1px 0px rgba(255,255,255,.3);
+	font-weight:bold !important;
+	
+	border-top:solid 1px rgba(0,0,0,.2);
+
+
+}
+
+#threadTree .tree-scrollable-columns {
+	background-image:none !important;
+	background-color:#000 !important;
+}
+
+#threadTree .treeCol .treecol-text {
+	font-size:10px !important;
+	text-transform: uppercase;
+	color:#333 !important;
+	text-shadow:0px 1px 0px rgba(255,255,255,.9);
 }
 
 treechildren::-moz-tree-row {
@@ -133,13 +277,53 @@ treechildren::-moz-tree-row {
 
 #folderTree treechildren { 
 	background-image:none !important;
-
+	background:none !important;
 }
+
 
 treechildren::-moz-tree-row(selected), treechildren::-moz-tree-row(current, focus), 
 treechildren::-moz-tree-row(selected, focus), treechildren::-moz-tree-row(selected, current, focus) { 
+	outline: none;
+}
+
+
+/****************************************
+The Account / Mailbox Pane
+****************************************/
+#folderTree {
+	
+	background-color:#D8DEE5 !important;
+	box-shadow:inset -2px 0px 2px rgba(0,0,0,.1) !important;
+}
+
+#folderTree  treechildren::-moz-tree-row(selected) {
+	background-color: #69c !important;
+	background-image:  -moz-linear-gradient(top, #bdc7dc 0%, #9fadc7 100%) !important;
+	color: #FFF !important;
+	text-shadow:0px 1px 0px rgba(0,0,0,.9) !important;
+	box-shadow:0px 1px 0px rgba(0,0,0,.4), inset 0px 1px 0px rgba(255,255,255,.7) !important;
+	font-weight:bold !important;
+	outline: none !important;
+	border-top:solid 1px rgba(0,0,0,.05) !important;
+	border-bottom:solid 1px rgba(0,0,0,.05) !important;
+}
+
+
+#folderTree  treechildren::-moz-tree-text(selected) {
+	font-weight:bold !important;
+}
+
+
+#folderPaneBox {
 
 }
+
+#folderPaneCols {
+	background:none !important;
+	background-image:none !important;
+	-moz-appearance: none !important;
+}
+
 
 /****************************************
 TABS!
@@ -215,15 +399,28 @@ tabpanel {
 	font-size:12px;
 }
 
-.tabmail-tab:hover .tab-background,
 .tabmail-tab[selected] .tab-background {
-	background:-moz-linear-gradient(top, #ffffff 0%, #DDDDDD 100%) !important;  
-	border: 1px solid threedshadow !important;
+	background:-moz-linear-gradient(top, #f8f8f8 0%, #DDDDDD 100%) !important;  
+	border: 1px solid rgba(0,0,0,.2) !important;
 	border-bottom: none !important;
 	border-top-left-radius: 4px !important;
 	border-top-right-radius: 4px !important;
 	margin-bottom:-2px;
-  	z-index:1000;
+  	z-index:1000 !important;
+  	box-shadow:inset 0px 1px 0px rgba(255,255,255,.7) !important;
+
+}
+
+.tabmail-tab:hover .tab-background {
+	background:-moz-linear-gradient(top, #f8f8f8 0%, #DDDDDD 100%) !important;  
+  	opacity: .6 !important;
+  	border: 1px solid rgba(0,0,0,.2) !important;
+	border-bottom: none !important;
+	border-top-left-radius: 4px !important;
+	border-top-right-radius: 4px !important;
+  	z-index:1000 !important;
+  	box-shadow:inset 0px 1px 0px rgba(255,255,255,.7) !important;
+
 
 }
 
@@ -242,4 +439,40 @@ tabpanel {
 
 /* Here we go */
 
+/****************************************
+New Message
+****************************************/
 
+#typecol-addressingWidget {
+	width : 4.2em  !important;
+	border:none !important; 
+	background-image:none !important;
+	background:none !important;
+}
+#top-gradient-box hbox {
+	width: 4.1em !important;
+}
+#top-gradient-box hbox {
+}
+
+#subject-box hbox {
+	width: 4.2em !important;
+}
+
+#subject-box hbox label {
+	font-size:10px !important;
+	display:none !important;
+}
+
+/****************************************
+Experiements
+****************************************/
+
+statusbarpanel /* Status bar */
+{
+	-moz-appearance: none !important; /* Override mozilla's settings */
+	color:rgba(0,0,0,.7) !important;
+	background:-moz-linear-gradient(top, #dddddd 0%, #c9c9c9 100%) !important;
+	font-size:11px !important;
+	text-shadow:0px 1px 0px rgba(255,255,255,.8);
+}
