--- a/userChrome.css
+++ b/userChrome.css
@@ -46,7 +46,7 @@ Message Window
 ****************************************/
 
 #singlemessage { 
-	background-color:#D8DEE5 !important;
+	background-color:#EEE !important;
 	box-shadow:inset 1px 0px 1px rgba(0,0,0,.1) !important;
 }
 
@@ -211,6 +211,7 @@ Toolbox, Panels and the Likes
 	z-index:300;
 	box-shadow:inset 0px 1px 0px rgba(255,255,255,.9) !important;
 	padding-left:10px !important;
+	padding-right:10px !important;
 	border-bottom:solid 1px rgba(0,0,0,.3) !important;
 
 }
@@ -223,17 +224,26 @@ Toolbox, Panels and the Likes
 	font-size:12px !important;
 }
 
+.toolbarbutton-text {
+	font-size:11px !important;
+	color:rgba(0,0,0,.8) !important;
+	text-shadow:0px 1px 0px rgba(255,255,255,.5) !important;
+	margin-left:5px !important;
+}
+
 
 #navigation-toolbox {
 	background-color:#FFF !important;
 	-moz-appearance:none;
+
 }
 
 /****************************************
-TREES! (Data Grids and Lists)
+
+TREES! (Data Grids and Lists) 
+
 ****************************************/
-tree, treecell,treechildren,treecol,treecols,treeitem,treerow,treeseparator
-{
+tree, treecell,treechildren,treecol,treecols,treeitem,treerow,treeseparator {
 	box-shadow: none !important; 
 	background-color: #fafafa !important; 
 	color: #444; 
@@ -257,16 +267,15 @@ treechildren::-moz-tree-row  {
 }
 
 treechildren { 
-	
 	text-shadow:0px 1px 0px rgba(255,255,255,.9) !important;
-	
-    
 }
 
 
 
 /****************************************
-Email Data List
+
+List of emails - center pane.
+
 ****************************************/
 #threadTree treecol {
 	-moz-appearance:none !important;
@@ -351,7 +360,9 @@ treechildren::-moz-tree-row(selected, focus), treechildren::-moz-tree-row(select
 
 
 /****************************************
+
 The Account / Mailbox Pane
+
 ****************************************/
 #folderTree {
 	
@@ -389,7 +400,9 @@ The Account / Mailbox Pane
 
 
 /****************************************
-TABS!
+
+TABS! 
+
 ****************************************/
 .tabbrowser-strip {
 	height: 32px !important; 
@@ -506,7 +519,7 @@ toolbarbutton {
 toolbarbutton:hover {
 	-moz-appearance:none !important;
 	background-color:rgba(0,0,0,.1) !important;
-	box-shadow:inset 0px 1px 2px rgba(0,0,0,.3), inset 0px -1px 0px rgba(255,255,255,.3) !important;
+	box-shadow:inset 0px 1px 2px rgba(0,0,0,.3), inset 0px -1px 0px rgba(255,255,255,.6) !important;
 
 }
 
@@ -518,7 +531,9 @@ toolbarbutton:hover {
 /* Here we go */
 
 /****************************************
+
 New Message
+
 ****************************************/
 
 #typecol-addressingWidget {
